# c-progs

./: CMakeLists.txt
chapter-1/: arrays.c  char-count.c  longest-line.c  power-function.c  word-count.c
chapter-2/: leap-year.c  stoint.c
chapter-3/: binary-search.c  count.c  shell-sort.c
intro/: a.out  ctof.c
